sfdx-source/force-app/main/default/objects/Contact/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-23682: It stores Account Name value to display in Create Opportunity Contact Roles from Stores Flow.</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>