sfdx-source/force-app/main/default/objects/Contact/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2206: This field stores the record type of account associated to the contact record.</description>
    <formula>Account.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>