sfdx-source/force-app/main/default/objects/Contact/fields/Account_Team_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>LEM-5727, LEM-23432: It indicates the Id of user associated as Account Team Member and Opportunity Team Member. It is used for identifying private contacts created for internal communications.</description>
    <externalId>true</externalId>
    <label>Related Team Member&apos;s User Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>