sfdx-source/force-app/main/default/objects/Contact/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <description>LEM-14822: It is used to store address Id recieved from SSMO payload.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>