sfdx-source/force-app/main/default/objects/Contact/fields/Address_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Address_Rejection_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It represents the address rejection reasons.</description>
    <label>Address Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Address</fullName>
            </value>
            <value>
                <fullName>Incomplete Address</fullName>
            </value>
            <value>
                <fullName>Technical Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>