sfdx-source/force-app/main/default/objects/Contact/fields/Alcohol_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Eligibility__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It signifies whether Mx’s location is eligible for alcohol sales and/or deliveries.</description>
    <label>Alcohol Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wet</fullName>
            </value>
            <value>
                <fullName>Moist</fullName>
            </value>
            <value>
                <fullName>Dry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>