sfdx-source/force-app/main/default/objects/Contact/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14733: It indicates the best time to contact the Mx.</description>
    <inlineHelpText>Best time period to contact the Mx</inlineHelpText>
    <label>Best Time to Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9 am -11 am</fullName>
            </value>
            <value>
                <fullName>11 am - 1 pm</fullName>
            </value>
            <value>
                <fullName>1 pm - 3 pm</fullName>
            </value>
            <value>
                <fullName>3 pm - 5 pm</fullName>
            </value>
            <value>
                <fullName>5 pm- 7 pm</fullName>
            </value>
            <value>
                <fullName>7 pm- 9 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>