sfdx-source/force-app/main/default/objects/Contact/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It represents the Business Id that was provisioned during the SSMO process.</description>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>