sfdx-source/force-app/main/default/objects/Contact/fields/Came_into_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Came_into_Coverage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It indicates when the Contact became in coverage.</description>
    <label>Came into Coverage</label>
    <type>DateTime</type>
</CustomField>