sfdx-source/force-app/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14818: It is used to Store the Company Name received in payload on SSMO fallout.</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>