sfdx-source/force-app/main/default/objects/Contact/fields/Contact_ID18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID18__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-103: Displays the 18 digit SFDC Id for the contact.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID18</label>
    <type>Text</type>
</CustomField>