sfdx-source/force-app/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1652: It indicates link of the Contact record.</description>
    <formula>HYPERLINK(&apos;/&apos; +  Id, FirstName + &apos; &apos; + LastName, &apos;_blank&apos;)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>