sfdx-source/force-app/main/default/objects/Contact/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-102,LEM-13427: It is used to identify the source of the contact creation.</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Selection Intel</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>