sfdx-source/force-app/main/default/objects/Contact/fields/Count_of_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Emails_Sent__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>Lem-14090: Its used to display the total number of “Email” Activities associated with the record that were sent to the record.</description>
    <inlineHelpText>Number of emails sent to the Merchant</inlineHelpText>
    <label>Count of Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>