sfdx-source/force-app/main/default/objects/Contact/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It indicates whether the Contact is in coverage or not.</description>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Coverage</fullName>
            </value>
            <value>
                <fullName>Not In Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>