sfdx-source/force-app/main/default/objects/Contact/fields/Date_SMS_Opted_Out_In__c.field-meta.xml
<CustomField>
    <fullName>Date_SMS_Opted_Out_In__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18017: It indicates the date when SMS is opted In or Out.</description>
    <label>Date SMS Opted Out/In</label>
    <type>Date</type>
</CustomField>