sfdx-source/force-app/main/default/objects/Contact/fields/Duplicate_Status__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14701: To track the duplicate status of Contact.</description>
    <label>Duplicate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>