sfdx-source/force-app/main/default/objects/Contact/fields/Email_Cassie_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Cassie_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores the Email Cassie ID.</description>
    <label>Email Cassie ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>