sfdx-source/force-app/main/default/objects/Contact/fields/Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It verifies that email address is accurate and legitimate.</description>
    <label>Email Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>