sfdx-source/force-app/main/default/objects/Contact/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fallout Event</fullName>
            </value>
            <value>
                <fullName>Onboarding Event</fullName>
            </value>
            <value>
                <fullName>SSOB Onboarding Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>