sfdx-source/force-app/main/default/objects/Contact/fields/Has_Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Has_Signed_Contract__c</fullName>
    <description>LEM-13426: To determine if the contact has signed a contract before</description>
    <label>Has Signed Contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>