sfdx-source/force-app/main/default/objects/Contact/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It indicates the hours during which the restaurant is open.</description>
    <label>Hours of Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>