sfdx-source/force-app/main/default/objects/Contact/fields/Inbound_Ingestion_Log__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Ingestion_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14813: It is used to store the associated inbound ingestion log.</description>
    <label>Inbound Ingestion Log</label>
    <referenceTo>Inbound_Ingestion_Log__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>