sfdx-source/force-app/main/default/objects/Contact/fields/Integration_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Contact_Type__c</fullName>
    <description>LEM-18808 : It is used to determine the contact type received from SSOB payload.</description>
    <label>Integration Contact Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>