sfdx-source/force-app/main/default/objects/Contact/fields/Last_Coverage_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Coverage_Check_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It indicates the time when the last coverage check was run.</description>
    <label>Last Coverage Check Time</label>
    <type>DateTime</type>
</CustomField>