sfdx-source/force-app/main/default/objects/Contact/fields/Last_Inbound_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Date_Time__c</fullName>
    <description>LEM-19889: It refers Inbound Ingestion’s “Created Date Time” field for stamping the “Last Inbound Date/Time” field on Opportunity for Q-assign routing to Inbound Sales Omni channel.</description>
    <formula>Inbound_Ingestion_Log__r.Created_Date_Time__c</formula>
    <label>Last Inbound Date/Time</label>
    <type>DateTime</type>
    <complianceGroup>GDPR</complianceGroup>
</CustomField>