sfdx-source/force-app/main/default/objects/Contact/fields/Mastered_In_Figment__c.field-meta.xml
<CustomField>
    <fullName>Mastered_In_Figment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-5346: This field indicates whether the Contact has to be mastered in figment or
    not depending on the segment type of the account.</description>
    <formula>AND(
        TEXT(Account.Segment__c) =  $Label.AccountSegmentSMB,
        TEXT(Account.Primary_Vertical__c) &lt;&gt; $Label.PrimaryVerticalRx
      )</formula>
    <label>Mastered In Figment</label>
    <type>Checkbox</type>
</CustomField>