sfdx-source/force-app/main/default/objects/Contact/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Menu URL</label>
    <type>Url</type>
</CustomField>