sfdx-source/force-app/main/default/objects/Contact/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13790: It stores any notes related to the SMB Contact.</description>
    <inlineHelpText>Please add any notes about the SMB contact</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>