sfdx-source/force-app/main/default/objects/Contact/fields/OCR_Flag_From_Nintex__c.field-meta.xml
<CustomField>
    <fullName>OCR_Flag_From_Nintex__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-2272: Flag value set by Nintex user and based on the flag flow will create OCR record.</description>
    <label>OCR Flag From Nintex</label>
    <type>Checkbox</type>
</CustomField>