sfdx-source/force-app/main/default/objects/Contact/fields/Opt_out_Email_Difference_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Email_Difference_Indicator__c</fullName>
    <description>LEM-10597: It indicates red/green color based on the difference in value between &apos;Email&apos; and &apos;Opt_out_Nintex_Email__c&apos; fields on Account.</description>
    <formula>IF(
  Email = Account.Opt_out_Nintex_Email__c,
  IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;&quot;, 15, 15),
  IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;&quot;, 15, 15)
)</formula>
    <label>Opt out Email Difference Indicator</label>
    <type>Text</type>
</CustomField>