sfdx-source/force-app/main/default/objects/Contact/fields/Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It stores the Order Protocol value from SSMO on Contact.</description>
    <label>Order Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Protocol</valueSetName>
    </valueSet>
</CustomField>