sfdx-source/force-app/main/default/objects/Contact/fields/Order_Protocol_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol_Email__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Order Protocol Email</label>
    <type>Email</type>
</CustomField>