sfdx-source/force-app/main/default/objects/Contact/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>