sfdx-source/force-app/main/default/objects/Contact/fields/POS_System__c.field-meta.xml
<CustomField>
    <fullName>POS_System__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It stores the value when the restaurant has a POS system.</description>
    <label>POS System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>