sfdx-source/force-app/main/default/objects/Contact/fields/Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vertical__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It defines the primary vertical of the SMB.</description>
    <label>Primary Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Vertical</valueSetName>
    </valueSet>
</CustomField>