sfdx-source/force-app/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Populate via the mappings in LEM-15313</description>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>