sfdx-source/force-app/main/default/objects/Contact/fields/Secondary_Email_Cassie_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Cassie_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16624: It stores Secondary Email Cassie ID.</description>
    <label>Secondary Email Cassie ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>