sfdx-source/force-app/main/default/objects/Contact/fields/Secondary_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Opt_Out__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-16624: It tracks if the Secondary email address associated with a Contact has opted out of email communications.</description>
    <label>Secondary Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>