sfdx-source/force-app/main/default/objects/Contact/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segment on the Account associated with the Contact LEM-15209</description>
    <formula>TEXT(Account.Segment__c)</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>