sfdx-source/force-app/main/default/objects/Contact/fields/Self_Serve_Step__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Step__c</fullName>
    <description>LEM-14822: It indicates the Self Serve Step where the Mx dropped off in Self Serve Process.</description>
    <label>Self Serve Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>