sfdx-source/force-app/main/default/objects/Contact/fields/SSMO_Business_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Business_Account_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16814: It is used to store SSMO business Account Id.</description>
    <label>SSMO Business Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>