sfdx-source/force-app/main/default/objects/Contact/fields/SSMO_Matching_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SSMO_Matching_Account_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14818: It is used to Store the matching account Id received in payload on SSMO fallout.</description>
    <label>SSMO Matching Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>