sfdx-source/force-app/main/default/objects/Contact/fields/SSN_Last_4Digits__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_4Digits__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-2387: Signifies the last four digits of the Mx&apos;s social security number. Required for alcohol in the US.</description>
    <inlineHelpText>Signifies the last four digits of the Mx&apos;s social security number. Required for alcohol in the US</inlineHelpText>
    <label>SSN (Last 4 Digits)</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>