sfdx-source/force-app/main/default/objects/Contact/fields/Starting_Point__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It represents the starting point of the Contact.</description>
    <label>Starting Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>