sfdx-source/force-app/main/default/objects/Contact/fields/Starting_Point_ID__c.field-meta.xml
<CustomField>
    <fullName>Starting_Point_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14822: It represents the Starting Point ID of the Contact.</description>
    <label>Starting Point ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>