sfdx-source/force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-13790: It indicates active or inactive status of the SMB contact.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Indicates whether the status of the SMB contact</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>