sfdx-source/force-app/main/default/objects/Contact/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <description>LEM-14822: It represents the Store Id that was provisioned during the SSMO process.</description>
    <label>Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>