sfdx-source/force-app/main/default/objects/Contact/fields/Submarket__c.field-meta.xml
<CustomField>
    <fullName>Submarket__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14822: It represents the sub-market of the Contact and would be populated by Mulesoft.</description>
    <label>Submarket</label>
    <referenceTo>Submarket__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>