sfdx-source/force-app/main/default/objects/Contact/validationRules/Validate_Birthdate_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Birthdate_Year</fullName>
    <active>true</active>
    <description>LEM-8030</description>
    <errorConditionFormula>NOT($Permission.Bypass_Account_Validation_Rules) &amp;&amp;
NOT(ISBLANK(Birthdate)) &amp;&amp;
YEAR(Birthdate) &lt;= 1900</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Please ensure the birthdate is after the year 1900.</errorMessage>
</ValidationRule>